Capitalize track on mobile and misc fixes

--- a/css/dest/wcasia-2020.css
+++ b/css/dest/wcasia-2020.css
@@ -2009,6 +2009,9 @@ h2.wordcamp-post-heading {
     color: #36393B; }
   .wcpt-schedule .wcpt-session-empty {
     border-top: 0 none; }
+    @media screen and (max-width: 640px) {
+      .wcpt-schedule .wcpt-session-empty {
+        display: none; } }
   .wcpt-schedule .wcb-session-cell-content a.wcpt-session-title {
     color: #E63331; }
   .wcpt-schedule .wcb-session-cell-content .wcpt-session-speakers {
@@ -2038,7 +2041,8 @@ h2.wordcamp-post-heading {
       border-radius: 0;
       content: attr(data-track-title);
       font-size: 100%;
-      padding: .5rem .75rem; }
+      padding: .5rem .75rem;
+      text-transform: capitalize; }
     .wcpt-schedule td.wcpt-session-type-session:after {
       display: inline-block;
       padding: .0625rem .375rem;
